--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,9 +35,9 @@ spring.groovy.template.cache=false
 spring.jmx.enabled=false
 
 #mybatis
-#mybatis.type-aliases-package=com.dong.music.beans
-#
-#mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
+mybatis.type-aliases-package=com.dong.music.beans
+
+mybatis.mapper-locations=classpath:mybatis/*.xml
 # Redis数据库索引（默认为0）
 spring.redis.database=0
 # Redis服务器地址
